Fixes overflow issues with tables on small screens

--- a/theme/custom.scss
+++ b/theme/custom.scss
@@ -496,3 +496,7 @@ h1.usa-hero__heading > p {
 a {
   word-break: break-word;
 }
+
+.overflow-table {
+  overflow-y: scroll;
+}
